K8s/lb/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.minikube.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
    - host: minikube.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
